# OpenKKND

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  __notes.txt
lib/src/legacy_dx/: strsafe.h
src/: CMakeLists.txt  Coroutine.cpp  Coroutine.h  Cursor.cpp  Cursor.h  Development.cpp  Entity.cpp  Entity.h  File.cpp  File.h  Input.cpp  Input.h  Level.cpp  Map.cpp  Map.h  Netz.cpp  Netz.h  Pathfind.cpp  Pathfind.h  Random.cpp  Random.h  Render.cpp  Render.h  RenderDrawHandlers.cpp  RenderDrawHandlers.h  SaveLoad.cpp  Script.cpp  Script.h  ScriptEvent.cpp  ScriptEvent.h  Sidebar.cpp  Sidebar.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  Video.cpp  Video.h  _unsorted_data.cpp  _unsorted_data.h  (+9 more)
src/Application/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameConfigFactory.cpp  GameConfigFactory.h  GameFactory.cpp  GameFactory.h  GameWIndowObserver.cpp  GameWindowObserver.h  IWindow.h  SdlWindow.cpp  SdlWindow.h  WindowConfig.h  WindowConfigFactory.cpp  WindowConfigFactory.h  WindowFactory.cpp  WindowFactory.h
src/Application/Scripts/: Aircraft.cpp  Buildings.cpp  BuildingsMute.cpp  CMakeLists.txt  Detenshn.cpp  EnemyAI.cpp  GameMenu.cpp  GameMenu.h  Infantry.cpp  MachineShop.cpp  MainMenu.cpp  MainMenu.h  Mission.cpp  Projectiles.cpp  Scar.cpp  Schrap.cpp  Towers.cpp  Upgrade.cpp  Vehicles.cpp
src/Engine/: BuildingLimits.cpp  BuildingLimits.h  CMakeLists.txt  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityRepository.cpp  EntityRepository.h
src/Engine/Infrastructure/: EntityRepository.cpp  EntityRepository.h
src/Infrastructure/: CMakeLists.txt  DependencyInjection.cpp  DependencyInjection.h  File.cpp  File.h  Input.cpp  Input.h  InputKeyboardObserver.cpp  InputKeyboardObserver.h  InputWindowObserver.cpp  InputWindowObserver.h  KeyboardInputEnum.h  Log.cpp  Log.h  Netz.cpp  Netz.h
src/Infrastructure/PlatformSpecific/: CMakeLists.txt  OsTools.cpp  OsTools.h  OsToolsLinux.cpp  OsToolsWindows.cpp
src/Infrastructure/Renderer/: CMakeLists.txt  Renderer.h  RendererConfig.h  RendererConfigFactory.h  RendererFactory.cpp  RendererFactory.h  SdlRenderer.cpp  SdlRenderer.h
src/Infrastructure/Window/: CMakeLists.txt  InputObserver.h  KeyboardObserver.h  MouseObserver.h  SdlWindow.cpp  SdlWindow.h  Window.h  WindowConfig.h  WindowConfigFactory.cpp  WindowConfigFactory.h  WindowFactory.cpp  WindowFactory.h  WindowObserver.h
src/Scripts/: Aircraft.cpp  Buildings.cpp  Detenshn.cpp  EnemyAI.cpp  Infantry.cpp  MainMenu.cpp  Mission.cpp  Projectiles.cpp  Scar.cpp  Schrap.cpp
